day 37 apexclass changed

--- a/force-app/main/default/classes/AccountHandler.cls
+++ b/force-app/main/default/classes/AccountHandler.cls
@@ -20,4 +20,28 @@ public with sharing class AccountHandler {
         throw new AuraHandledException(e.getMessage());
     }
    }
+
+   @AuraEnabled
+   public static List<Account> getAccountsRecord(String industry){
+    try {
+        //return [select Id,Name,Rating,Industry from Account With SECURITY_ENFORCED];
+        return [select Id,Name,Rating,Industry from Account  where Industry=:industry with USER_MODE];
+       // System.debug('Hi');
+        
+    } catch (Exception e) {
+        throw new AuraHandledException(e.getMessage());
+    }
+   }
+
+   @AuraEnabled
+   public static String updateTicker(String recordId,String newTicker){
+    Account acc=new Account(Id=recordId,TickerSymbol=newTicker);
+    try {
+       update acc;
+       return 'Success';
+        
+    } catch (Exception e) {
+        throw new AuraHandledException(e.getMessage());
+    }
+   }
 }
